--- a/data/gspanel/panel-0.2.3.css
+++ b/data/gspanel/panel-0.2.3.css
@@ -18,12 +18,14 @@
     --weaponAffix3: #396CDE;
     --weaponAffix2: #51B72F;
     --weaponAffix1: #A3A3A3;
-    --artiMark4: #E85656;
+    --artiMark4: #FF5722;
     --artiMark3: #FFE699;
     --artiMark2: #D699FF;
     --artiMark1: #FFFFFF;
     --ambrLight: rgb(233, 229, 220);
     --ambrDeep: rgb(74, 83, 102);
+    --artiBg: rgba(46, 53, 62, .68);
+    --tableBg: #2e353e;
 }
 
 @font-face {
@@ -43,11 +45,9 @@
 body {
     overflow: overlay;
     margin: 0px;
-    /* transform: scale(1.5); */
 }
 
 #container {
-    /* position: relative; */
     width: 960px;
     height: auto;
     min-height: 720px;
@@ -58,7 +58,6 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    /* bottom: calc(-203px - -30px); */
 }
 
 #container.火 {
@@ -231,7 +230,6 @@ div.AvatarLevel>div>div {
     line-height: normal;
     text-shadow: 3px 5px 4px #333333ad;
     color: #ffffff;
-    /* vertical middle */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -260,7 +258,6 @@ div.AvatarCons {
     height: 78px;
     right: 494px;
     top: 642px;
-
     align-items: center;
     display: flex;
     gap: 4px;
@@ -311,16 +308,12 @@ div.TopRightBlur>h1.AvatarTitle {
     line-height: 60px;
     letter-spacing: 0;
     text-align: center;
-    /* text-stroke: 2px solid rgba(0, 0, 0, 0.68);
-    -webkit-text-stroke: 2px solid rgba(0, 0, 0, 0.68);
-    text-shadow: 3px 6px 4px rgba(0, 0, 0, 0.25); */
     text-shadow:
         2px 2px 0 rgba(0, 0, 0, 0.68),
         -2px -2px 0 rgba(0, 0, 0, 0.68),
         2px -2px 0 rgba(0, 0, 0, 0.68),
         -2px 2px 0 rgba(0, 0, 0, 0.68),
         2px 2px 0 rgba(0, 0, 0, 0.68);
-    /* disable user agent stylesheet */
     margin-block-start: 25px;
     margin-block-end: 10px;
     margin-inline-start: 0px;
@@ -387,7 +380,6 @@ div.TopRightBlur>div.AvatarSkills>div.skill>div.level>div {
     height: 40px;
     line-height: 40px;
     letter-spacing: 0;
-    /* vertical middle */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -404,7 +396,6 @@ div.TopRightBlur>ul.PropPanel {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* disable user agent stylesheet */
     list-style-type: none;
     margin-block-start: unset;
     margin-block-end: unset;
@@ -422,7 +413,6 @@ div.TopRightBlur>ul.PropPanel>li {
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* justify-content: center; */
 }
 
 div.TopRightBlur>ul.PropPanel>li>span.weight {
@@ -502,7 +492,7 @@ div.AvatarEquips>div.item {
 
 div.AvatarEquips>div.item:not(.arti)>div.weapon,
 div.AvatarEquips>div.item.arti {
-    background-color: var(--ambrDeep);
+    background-color: var(--artiBg);
     box-shadow: 0px 15px 15px rgb(0 0 0 / 40%);
 }
 
@@ -513,7 +503,7 @@ div.AvatarEquips>div.item:not(.arti) {
 div.AvatarEquips>div.item:not(.arti)>div {
     width: 280px;
     height: 135px;
-    background-color: #2e353e;
+    background-color: var(--tableBg);
     box-shadow: 0px 15px 15px rgb(0 0 0 / 40%);
     border-radius: 15px;
     border: none;
@@ -539,7 +529,7 @@ div.AvatarEquips>div.item:not(.arti)>div.mark>div.tip::before {
 div.AvatarEquips>div.item:not(.arti)>div.mark>div.tip.ACE²,
 div.AvatarEquips>div.item:not(.arti)>div.mark>div.tip.ACE,
 div.AvatarEquips>div.item:not(.arti)>div.mark>div.tip.SSS {
-    color: #ff5722;
+    color: #e85656;
     font-weight: 700;
 }
 
@@ -910,7 +900,6 @@ div.AvatarEquips>div.item.arti>div.note>div {
     height: 35px;
     background-color: #ff5652;
     border-radius: 0 15px 0 15px;
-    /* box-shadow: inset 0px 0px 0px 1px var(--ambrLight); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -931,7 +920,7 @@ div.AvatarEquips>div.item.arti>div.note>div.nohit::after {
 div.AvatarEquips>div.item.arti>div.note>div.calc {
     width: auto;
     min-width: 130px;
-    background-color: #2e353e;
+    background-color: var(--tableBg);
     border-radius: 15px 0 15px 0;
 }
 
@@ -980,7 +969,7 @@ ul.AvatarBuffs {
     min-height: 90px;
     width: 900px;
     border-radius: 15px;
-    background-color: #2e353e;
+    background-color: var(--tableBg);
     box-shadow: 0px 15px 15px rgb(0 0 0 / 40%);
     position: relative;
     top: 0px;
@@ -1008,7 +997,6 @@ ul.AvatarBuffs>li {
     flex-direction: row;
     align-items: stretch;
     border-bottom: 2px solid rgba(255 255 255 / 20%);
-    /* justify-content: center; */
 }
 
 ul.AvatarDamage>li:last-child,
